objects/Log_Object__c.object
<CustomObject>
    <description>This object is to keep track of certain logs for verification and audit purposes</description>
    <fields>
        <fullName>Activity_DateTime__c</fullName>
        <description>Field is a Date/Time type</description>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Date__c</fullName>
        <label>Log Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Fired__c</fullName>
        <label>Process Fired</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Unique_Name__c</fullName>
        <description>Brought in from the Account Profile</description>
        <label>Profile Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Logs Object</relationshipLabel>
        <relationshipName>Logs_Object_Acct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Form__c</fullName>
        <formula>IF(ISNUMBER(RIGHT(LEFT(Profile_Unique_Name__c ,39),2)) , &apos;&apos;,RIGHT(LEFT(Profile_Unique_Name__c ,39),2))</formula>
        <label>State_Form</label>
        <type>Text</type>
    </fields>
    <label>Log Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Object</pluralLabel>
    <recordTypes>
        <fullName>Tax_Exempt_Email_Notification</fullName>
        <active>true</active>
        <description>Log for a Tax Exempt Expiration Email Notification</description>
        <label>Tax Exempt Email Notification</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>